force-app/main/default/objects/Negotiated_Customer__c/Negotiated_Customer__c.object-meta.xml
<CustomObject>
    <label>Negotiated Customer</label>
    <nameField>
        <label>Negotiated Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Negotiated Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>