force-app/main/default/objects/Negotiated_Customer__c/fields/ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Number__c</fullName>
    <externalId>true</externalId>
    <label>ERP Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>