force-app/main/default/objects/Negotiated_Customer__c/fields/LEGACY_SYSTEM__c.field-meta.xml
<CustomField>
    <fullName>LEGACY_SYSTEM__c</fullName>
    <label>LEGACY_SYSTEM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>XLGO</fullName>
            </value>
            <value>
                <fullName>XLDM</fullName>
            </value>
            <value>
                <fullName>PROTEAN</fullName>
            </value>
            <value>
                <fullName>SAP - EGGS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>