force-app/main/default/objects/Negotiated_Customer__c/fields/MARKET_CHANNEL__c.field-meta.xml
<CustomField>
    <fullName>MARKET_CHANNEL__c</fullName>
    <label>MARKET_CHANNEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>