force-app/main/default/objects/Negotiated_Customer__c/fields/PARENT_CUSTOMER__c.field-meta.xml
<CustomField>
    <fullName>PARENT_CUSTOMER__c</fullName>
    <label>PARENT_CUSTOMER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>