force-app/main/default/objects/Negotiated_Customer__c/fields/PARENT_CUSTOMER_DESC__c.field-meta.xml
<CustomField>
    <fullName>PARENT_CUSTOMER_DESC__c</fullName>
    <label>PARENT CUSTOMER DESC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>