force-app/main/default/objects/Negotiated_Customer__c/fields/PAYER__c.field-meta.xml
<CustomField>
    <fullName>PAYER__c</fullName>
    <label>PAYER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>