force-app/main/default/objects/Negotiated_Customer__c/fields/SEGMENT__c.field-meta.xml
<CustomField>
    <fullName>SEGMENT__c</fullName>
    <label>SEGMENT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>