force-app/main/default/objects/Negotiated_Customer__c/fields/SOLD_TO_SHIP_TO__c.field-meta.xml
<CustomField>
    <fullName>SOLD_TO_SHIP_TO__c</fullName>
    <label>SOLD TO SHIP TO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>