force-app/main/default/objects/Negotiated_Customer__c/fields/SoldtoShipto__c.field-meta.xml
<CustomField>
    <fullName>SoldtoShipto__c</fullName>
    <label>Sold ToShip To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>